# photo-editor

./: .eslintignore  .eslintrc.cjs  .gitignore  .headers  ADVANCED_PARAMETERS_COMPLETE.md  ADVANCED_PARAMETERS_IMPLEMENTATION.md  BUG_REPORT_2025-01-12.md  CANVAS_DEBUGGING.md  CLAUDE.md  CROP_PREVIEW_ISSUE_DIAGNOSIS.md  DEPLOYMENT.md  FIXES_SUMMARY.md  TESTING_ADVANCED_PARAMETERS.md  UI_REDESIGN_COMPLETE.md  WASM-photo-design.md  WASM_BUILD_GUIDE.md  WASM_COMPRESSION_FIX.md  WASM_INTEGRATION_COMPLETE.md  WASM_RECOMPILE_GUIDE.md  _redirects  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.toml
docs/: BATCH_PROCESSING_TEST_GUIDE.md
public/: _headers  _pages.json
public/wasm/: bgremove.js  core.d.ts  core.js  photo_editor_core_bg.wasm
scripts/: fix-worker-files.js
src/: App.tsx  main.tsx  vite-env.d.ts
src/components/batch/: BatchExport.tsx  BatchProgress.tsx  FileSelection.tsx  index.ts
src/components/bgremove/: BgRemoveControls.tsx  ColorRemoval.tsx  GrabCutSimple.tsx  GrabCutTool.tsx  MagicWand.tsx  (+2 more)
src/hooks/: useBatchProcessor.ts  useBgRemoveWorker.ts  useCompressWorker.ts  useCoreWorker.ts  useKeyboardShortcuts.ts  useWasmWorker.ts
src/layouts/: WorkspaceLayout.tsx
src/pages/: CompressTool.tsx  CropTool.tsx  ResizeTool.tsx  RotateFlipTool.tsx  WasmTest.tsx  WasmTestSimple.tsx
src/store/: appStore.ts  imageStore.ts  index.ts  processStore.ts  toastStore.ts
src/types/: batch.ts  image.ts  index.ts  wasm-instance.ts  wasm.ts  worker.ts
src/utils/: canvasUtils.ts  constants.ts  fileUtils.ts  imageUtils.ts  mockWasm.ts  wasmErrorHandler.ts  wasmLoader.ts  workerManager.ts  zipUtils.test.ts  zipUtils.ts
src/workers/: batchWorker.ts  bgremoveWorker.ts  compressWorker.ts  coreWorker.ts
wasm-src/bgremove/: Cargo.toml  README.md
wasm-src/bgremove/src/: color_threshold.rs  grabcut.rs  lib.rs  magic_wand.rs
wasm-src/compress/: Cargo.toml  README.md
wasm-src/compress/src/: binary_search.rs  jpeg.rs  lib.rs  png.rs  webp.rs
wasm-src/core/: README.md
wasm-src/core/wasm-src/core/: Cargo.toml
wasm-src/core/wasm-src/core/src/: lib.rs  resize.rs  rotate.rs
(+34 files in other folders)
