[package]
name = "photo-editor-compress"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
image = { version = "0.25", features = ["jpeg", "png"], default-features = false }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Note: WebP compression uses browser Canvas API (OffscreenCanvas)
# Pure Rust WebP encoders like 'webp' crate require libwebp-sys (needs clang)
# For WASM compatibility, we rely on Canvas fallback implemented in compressWorker.ts

# Advanced JPEG encoding (if needed for more control)
# jpeg-encoder = "0.6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
