[package]
name = "photo-editor-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
image = { version = "0.25", features = ["jpeg", "png", "webp"], default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
